--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -55,6 +55,13 @@ the MIT License. See LICENSE in the project root for license information. -->
 
         <ContentDialog
             x:Load="False"
+            x:Name="CloseReadOnlyDialog"
+            x:Uid="CloseReadOnlyDialog"
+            DefaultButton="Primary">
+        </ContentDialog>
+
+        <ContentDialog
+            x:Load="False"
             x:Name="MultiLinePasteDialog"
             x:Uid="MultiLinePasteDialog"
             DefaultButton="Primary">
