Represent inheritance in Settings UI (#8919)
## Summary of the Pull Request
Introduces the `SettingContainer`. `SettingContainer` is used to wrap a setting in the settings UI and provide the following functionality:
- a reset button next to the header
- tooltips and automation properties for the setting being wrapped
- a comment stating if you are currently overriding a setting

## References
[Spec - Inheritance in Settings UI](https://github.com/microsoft/terminal/blob/main/doc/specs/%231564%20-%20Settings%20UI/cascading-settings.md)
#8804 - removes the ambiguity of leaving a setting blank
#6800 - Settings UI Epic
#8899 - Automation properties for Settings UI
#8768 - Keyboard Navigation

## PR Checklist
* [X] Closes #8804

## Detailed Description of the Pull Request / Additional comments
A few highlights in this PR:
- CommonResources.xaml:
  - we need to merge the SettingContainerStyle.xaml in there. Otherwise, XAML doesn't merge these files properly and can't apply the template.
- Profiles.cpp:
  - view model checks if the starting directory and background image were reset, to determine which value to show when unchecking the special value
  - `Profiles::OnNavigatedTo()` needs a property changed handler to update its own "Current<Setting>" and update the UI properly
- Profiles.xaml:
  - basically wrapped all of the settings we want to be inheritable in there
  - `Binding` is used instead of `x:Bind` in some places because `x:Bind` can't find the parent `SettingContainer` and gives you a compiler error.
- Resources.resw:
  - had to set the "HeaderText" and "HelpText" on each setting container. Does a decent localization burden, unfortunately.
- `SettingContainer` files
  - This operates by creating a template and applying that template over other settings. This allows you to inject the existing controls inside of this. This means that we need to provide our UIElements names and access/modify them via `OnApplyTemplate`
  - We had to rem

--- a/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
@@ -25,51 +25,44 @@ the MIT License. See LICENSE in the project root for license information. -->
     <ScrollViewer>
         <StackPanel Style="{StaticResource SettingsStackStyle}">
             <!--Theme-->
-            <ContentPresenter Style="{StaticResource SettingContainerStyle}"
-                              Margin="0">
-                <muxc:RadioButtons x:Uid="Globals_Theme"
-                                   SelectedItem="{x:Bind CurrentTheme, Mode=TwoWay}"
+            <local:SettingContainer x:Uid="Globals_Theme"
+                                    Margin="0">
+                <muxc:RadioButtons SelectedItem="{x:Bind CurrentTheme, Mode=TwoWay}"
                                    ItemsSource="{x:Bind ThemeList, Mode=OneWay}"
                                    ItemTemplate="{StaticResource EnumRadioButtonTemplate}"/>
-            </ContentPresenter>
+            </local:SettingContainer>
 
             <!--Always show tabs-->
-            <ContentPresenter Style="{StaticResource SettingContainerStyle}">
-                <ToggleSwitch x:Uid="Globals_AlwaysShowTabs"
-                              IsOn="{x:Bind State.Globals.AlwaysShowTabs, Mode=TwoWay}"/>
-            </ContentPresenter>
+            <local:SettingContainer x:Uid="Globals_AlwaysShowTabs">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.AlwaysShowTabs, Mode=TwoWay}"/>
+            </local:SettingContainer>
 
             <!--Show Titlebar-->
-            <ContentPresenter Style="{StaticResource SettingContainerStyle}">
-                <ToggleSwitch x:Uid="Globals_ShowTitlebar"
-                              IsOn="{x:Bind State.Globals.ShowTabsInTitlebar, Mode=TwoWay}"/>
-            </ContentPresenter>
+            <local:SettingContainer x:Uid="Globals_ShowTitlebar">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.ShowTabsInTitlebar, Mode=TwoWay}"/>
+            </local:SettingContainer>
 
             <!--Show Title in Titlebar-->
-            <ContentPresenter Style="{StaticResource SettingContainerStyle}">
-                <ToggleSwitch x:Uid="Globals_ShowTitleInTitlebar"
-                              IsOn="{x:Bind State.Globals.ShowTitleInTitlebar, Mode=TwoWay}"/>
-            </ContentPresenter>
+            <local:SettingContainer x:Uid="Globals_ShowTitleInTitlebar">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.ShowTitleInTitlebar, Mode=TwoWay}"/>
+            </local:SettingContainer>
 
             <!--Always on Top-->
-            <ContentPresenter Style="{StaticResource SettingContainerStyle}">
-                <ToggleSwitch x:Uid="Globals_AlwaysOnTop"
-                              IsOn="{x:Bind State.Globals.AlwaysOnTop, Mode=TwoWay}"/>
-            </ContentPresenter>
+            <local:SettingContainer x:Uid="Globals_AlwaysOnTop">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.AlwaysOnTop, Mode=TwoWay}"/>
+            </local:SettingContainer>
 
             <!--Tab Width Mode-->
-            <ContentPresenter Style="{StaticResource SettingContainerStyle}">
-                <muxc:RadioButtons x:Uid="Globals_TabWidthMode"
-                                   SelectedItem="{x:Bind CurrentTabWidthMode, Mode=TwoWay}"
+            <local:SettingContainer x:Uid="Globals_TabWidthMode">
+                <muxc:RadioButtons SelectedItem="{x:Bind CurrentTabWidthMode, Mode=TwoWay}"
                                    ItemsSource="{x:Bind TabWidthModeList, Mode=OneWay}"
                                    ItemTemplate="{StaticResource EnumRadioButtonTemplate}"/>
-            </ContentPresenter>
+            </local:SettingContainer>
 
             <!--Disable Animations-->
-            <ContentPresenter Style="{StaticResource SettingContainerStyle}">
-                <ToggleSwitch x:Uid="Globals_DisableAnimations"
-                              IsOn="{x:Bind State.Globals.DisableAnimations, Mode=TwoWay}"/>
-            </ContentPresenter>
+            <local:SettingContainer x:Uid="Globals_DisableAnimations">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.DisableAnimations, Mode=TwoWay}"/>
+            </local:SettingContainer>
         </StackPanel>
     </ScrollViewer>
 </Page>
