--- a/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
+++ b/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
@@ -1,18 +1,19 @@
-﻿<ResourceDictionary
+﻿<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
+the MIT License. See LICENSE in the project root for license information. -->
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls">
+
+    <!--Merge SettingContainerStyle here to give every page access to the SettingContainer-->
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="SettingContainerStyle.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
 
     <x:Double x:Key="StandardIconSize">14.0</x:Double>
     <Thickness x:Key="StandardIndentMargin">13,0,0,0</Thickness>
     <Thickness x:Key="StandardControlMargin">0,24,0,0</Thickness>
     <x:Double x:Key="StandardBoxMinWidth">250</x:Double>
-
-    <!-- This is for easier transition to the SettingsContainer control.
-         The SettingsContainer will wrap a setting with inheritance UI.-->
-    <Style x:Key="SettingContainerStyle" TargetType="ContentPresenter">
-        <Setter Property="Margin" Value="{StaticResource StandardControlMargin}"/>
-    </Style>
 
     <!-- This is for styling the entire items control used on the
          color schemes page-->
@@ -42,11 +43,6 @@
         <Setter Property="Width" Value="{StaticResource StandardBoxMinWidth}"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="TextWrapping" Value="Wrap"/>
-    </Style>
-
-    <!--Used to create a header for a control-->
-    <Style x:Key="CustomSettingHeaderStyle" TargetType="TextBlock">
-        <Setter Property="Margin" Value="0,0,0,4"/>
     </Style>
 
     <!--Used for disclaimers-->
@@ -108,10 +104,6 @@
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5,0,0,0"/>
-    </Style>
-
-    <Style x:Key="SliderHeaderStyle" TargetType="TextBlock" BasedOn="{StaticResource CustomSettingHeaderStyle}">
-        <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
 
     <Style x:Key="CustomSliderControlGridStyle" TargetType="Grid">
