--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -133,10 +133,10 @@ the MIT License. See LICENSE in the project root for license information. -->
 
                         <mux:ProgressRing
                             Grid.Column="0"
-                            IsActive="{x:Bind Item.(local:TabPaletteItem.IsProgressRingActive), Mode=OneWay}"
-                            Visibility="{x:Bind Item.(local:TabPaletteItem.IsProgressRingActive), Mode=OneWay}"
-                            IsIndeterminate="{x:Bind Item.(local:TabPaletteItem.IsProgressRingIndeterminate), Mode=OneWay}"
-                            Value="{x:Bind Item.(local:TabPaletteItem.ProgressValue), Mode=OneWay}"
+                            IsActive="{x:Bind Item.(local:TabPaletteItem.TabStatus).IsProgressRingActive, Mode=OneWay}"
+                            Visibility="{x:Bind Item.(local:TabPaletteItem.TabStatus).IsProgressRingActive, Mode=OneWay}"
+                            IsIndeterminate="{x:Bind Item.(local:TabPaletteItem.TabStatus).IsProgressRingIndeterminate, Mode=OneWay}"
+                            Value="{x:Bind Item.(local:TabPaletteItem.TabStatus).ProgressValue, Mode=OneWay}"
                             MinHeight="0"
                             MinWidth="0"
                             Height="15"
@@ -163,17 +163,25 @@ the MIT License. See LICENSE in the project root for license information. -->
 
                             <FontIcon
                                 FontFamily="Segoe MDL2 Assets"
-                                Visibility="{x:Bind Item.(local:TabPaletteItem.BellIndicator), Mode=OneWay}"
+                                Visibility="{x:Bind Item.(local:TabPaletteItem.TabStatus).BellIndicator, Mode=OneWay}"
                                 Glyph="&#xEA8F;"
                                 FontSize="12"
                                 Margin="0,0,8,0"/>
 
                             <FontIcon
                                 FontFamily="Segoe MDL2 Assets"
-                                Visibility="{x:Bind Item.(local:TabPaletteItem.IsPaneZoomed), Mode=OneWay}"
+                                Visibility="{x:Bind Item.(local:TabPaletteItem.TabStatus).IsPaneZoomed, Mode=OneWay}"
                                 Glyph="&#xE8A3;"
                                 FontSize="12"
                                 Margin="0,0,8,0"/>
+
+                            <FontIcon x:Name="HeaderLockIcon"
+                                FontFamily="Segoe MDL2 Assets"
+                                Visibility="{x:Bind Item.(local:TabPaletteItem.TabStatus).IsReadOnlyActive, Mode=OneWay}"
+                                Glyph="&#xE72E;"
+                                FontSize="12"
+                                Margin="0,0,8,0"/>
+
                         </StackPanel>
                     </Grid>
                 </ListViewItem>
