--- a/src/cascadia/TerminalSettingsEditor/MainPage.xaml
+++ b/src/cascadia/TerminalSettingsEditor/MainPage.xaml
@@ -35,7 +35,8 @@ the MIT License. See LICENSE in the project root for license information. -->
                          Header="{Binding ElementName=SettingsNav, Path=SelectedItem.Content, Mode=OneWay}"
                          Loaded="SettingsNav_Loaded"
                          ItemInvoked="SettingsNav_ItemInvoked"
-                         IsBackButtonVisible="Collapsed">
+                         IsBackButtonVisible="Collapsed"
+                         TabFocusNavigation="Cycle">
 
         <muxc:NavigationView.MenuItems>
     
@@ -88,6 +89,7 @@ the MIT License. See LICENSE in the project root for license information. -->
         <muxc:NavigationView.PaneFooter>
             <!--The OpenJson item needs both Tapped and KeyDown handler-->
             <muxc:NavigationViewItem x:Uid="Nav_OpenJSON"
+                                     x:Name="OpenJsonNavItem"
                                      Tapped="OpenJsonTapped"
                                      KeyDown="OpenJsonKeyDown">
                 <muxc:NavigationViewItem.Icon>
@@ -118,9 +120,10 @@ the MIT License. See LICENSE in the project root for license information. -->
                            Margin="30,0,0,0"/>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,0,30,0">
                     <Button x:Uid="Settings_ResetSettingsButton"
-                            ToolTipService.Placement="Mouse"
+                            x:Name="ResetButton"
                             Click="ResetButton_Click"/>
                     <Button x:Uid="Settings_SaveSettingsButton"
+                            x:Name="SaveButton"
                             Style="{StaticResource AccentButtonStyle}"
                             Margin="10,0,0,0"
                             Click="SaveButton_Click"/>
