Ensure hyperlinks de-underline when pointer leaves terminal (#9195)
Introduced PointerExited handler to nullify last hovered cell
(which will also de-underline the hyperlink if required).

Closes #9141

--- a/src/cascadia/TerminalControl/TermControl.xaml
+++ b/src/cascadia/TerminalControl/TermControl.xaml
@@ -45,7 +45,8 @@ the MIT License. See LICENSE in the project root for license information. -->
                   Background="Transparent"
                   PointerPressed="_PointerPressedHandler"
                   PointerMoved="_PointerMovedHandler"
-                  PointerReleased="_PointerReleasedHandler">
+                  PointerReleased="_PointerReleasedHandler"
+                  PointerExited="_PointerExitedHandler">
 
                 <SwapChainPanel x:Name="SwapChainPanel"
                                 SizeChanged="_SwapChainSizeChanged"
