Polish settings UI localized text (#9124)
Updates the following text in the settings UI
- focus follow mouse mode is introduced to be more instructional
- focus follow mouse mode tooltip removed
- avoid double negative in "disable pane animation"

Closes #8900 
Updates #6459 Settings UI text

--- a/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
@@ -19,6 +19,8 @@ the MIT License. See LICENSE in the project root for license information. -->
             <DataTemplate x:DataType="local:EnumEntry" x:Key="EnumRadioButtonTemplate">
                 <RadioButton Content="{x:Bind EnumName, Mode=OneWay}"/>
             </DataTemplate>
+            
+            <local:InvertedBooleanConverter x:Key="InvertedBooleanConverter"/>
         </ResourceDictionary>
     </Page.Resources>
 
@@ -60,8 +62,9 @@ the MIT License. See LICENSE in the project root for license information. -->
             </local:SettingContainer>
 
             <!--Disable Animations-->
-            <local:SettingContainer x:Uid="Globals_DisableAnimations">
-                <ToggleSwitch IsOn="{x:Bind State.Globals.DisableAnimations, Mode=TwoWay}"/>
+            <!-- NOTE: the UID is "DisablePaneAnimationsReversed" not "DisablePaneAnimations". See GH#9124 for more details. -->
+            <local:SettingContainer x:Uid="Globals_DisableAnimationsReversed">
+                <ToggleSwitch IsOn="{x:Bind State.Globals.DisableAnimations, Mode=TwoWay, Converter={StaticResource InvertedBooleanConverter}}"/>
             </local:SettingContainer>
         </StackPanel>
     </ScrollViewer>
